fixed theme settings save loading gif align

--- a/framework/static/css/fw.css
+++ b/framework/static/css/fw.css
@@ -3081,6 +3081,12 @@ body.rtl .fw-modal .media-frame-content > form .fw-options-tabs-contents .fw-opt
 	margin-top: 0;
 }
 
+.fw-sole-modal .fw-sole-modal-content h2 img.wp-spinner {
+	vertical-align: baseline;
+	position: relative;
+	top: 2px;
+}
+
 .fw-sole-modal .fw-sole-modal-content p {
 	font-size: 13px;
 	line-height: 19px;
